Autosplit Output gives unexepected results #91005

Closed
opened 2021-08-28 10:30:00 +02:00 by Hugo Schouppe · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.77

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-20 06:37, hash: cea24b4b4a
Worked: (newest version of Blender that worked as expected)

Short description of error
The Autosplit Output option in Output Properties > Output > Encoding should split the rendered output at 2GB boundary.
The resulting parts (starting from the second one) have missing video (in the VLC player; audio seems OK) or missing audio in the MPV player (video seems OK).

Exact steps for others to reproduce the error

  • Import a large video; for example the 6.27 GB open movie Tears of Steel (to download http://ftp.nluug.nl/pub/graphics/blender/demo/movies/ToS/)
  • Render it with a format that creates a file > 2GB. For example: MPEG-4, lossless with keyframe interval = 0.
  • For this demo, it creates 10 parts (_000xxx.mp4, _001xxx.mp4, ...) each of about 1.9 GB; except the last one which is smaller.
  • Play the second or higher parts with VLC player. The video at the beginning of the file is missing; the audio seems OK.
  • Play the 6th or 7th part with the MPV player. The video seems OK but the audio is missing or not synchronized.

Blend-file attached
autosplit.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.77 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-20 06:37, hash: `cea24b4b4a` Worked: (newest version of Blender that worked as expected) **Short description of error** The Autosplit Output option in Output Properties > Output > Encoding should split the rendered output at 2GB boundary. The resulting parts (starting from the second one) have missing video (in the VLC player; audio seems OK) or missing audio in the MPV player (video seems OK). **Exact steps for others to reproduce the error** - Import a large video; for example the 6.27 GB open movie Tears of Steel (to download http://ftp.nluug.nl/pub/graphics/blender/demo/movies/ToS/) - Render it with a format that creates a file > 2GB. For example: MPEG-4, lossless with keyframe interval = 0. - For this demo, it creates 10 parts (_000xxx.mp4, _001xxx.mp4, ...) each of about 1.9 GB; except the last one which is smaller. - Play the second or higher parts with VLC player. The video at the beginning of the file is missing; the audio seems OK. - Play the 6th or 7th part with the MPV player. The video seems OK but the audio is missing or not synchronized. Blend-file attached [autosplit.blend](https://archive.blender.org/developer/F10340093/autosplit.blend)
Author

Added subscriber: @HUSCH

Added subscriber: @HUSCH
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58
Contributor

Did it ever work before? Could you also try Blender 2.83 and 2.93?

Did it ever work before? Could you also try Blender 2.83 and 2.93?
Author

I've tried it with 2.93 (2021-08-17) with the same result. Maybe, it has never worked.

I've tried it with 2.93 (2021-08-17) with the same result. Maybe, it has never worked.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm, seems that video stream is missing some important data.

Can confirm, seems that video stream is missing some important data.

Checking this now, So far it looks like there is audio stream which much longer than video. This is causing issues with codec initialization somehow.

There is error:

Could not find codec parameters for stream 0 (Video: h264, 1 reference frame (avc1 / 0x31637661), none, 1920x1080, 1/24576, 129344 kb/s): unspecified pixel format
Consider increasing the value for the 'analyzeduration' (0) and 'probesize' (5000000) options

Looks like error on encoding side..

Checking this now, So far it looks like there is audio stream which much longer than video. This is causing issues with codec initialization somehow. There is error: ``` Could not find codec parameters for stream 0 (Video: h264, 1 reference frame (avc1 / 0x31637661), none, 1920x1080, 1/24576, 129344 kb/s): unspecified pixel format Consider increasing the value for the 'analyzeduration' (0) and 'probesize' (5000000) options ``` Looks like error on encoding side..

This issue was referenced by 8e2ee4a3b7

This issue was referenced by 8e2ee4a3b7c261aa973001622419e2844a37f0fb

This issue was referenced by c1f5d8d023

This issue was referenced by c1f5d8d023c6fdef67efbc6ce2af49e384c9bd98

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-12-14 01:31:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91005
No description provided.